deploy: bd5ae3165b6872c7a14d866d281b8992754ac026

--- a/en/index.html
+++ b/en/index.html
@@ -3,8 +3,8 @@
 <a href=/en/tags/>Tags</a>
 <a href=/en/about/>About me</a>
 | <span id=dark-mode-toggle onclick=toggleTheme()></span>
-<script src=https://yanpitangui.com/js/themetoggle.js></script><nav aria-label="Language switcher"><span aria-label=en>en</span>
-<span aria-labelledby=dropdown-title><a title=pt href=https://yanpitangui.com/pt/ aria-label=pt>pt</a></span></nav></nav></header><main class=list><div class=site-description></div></main><footer><div style=display:flex><a class=soc href=https://github.com/yanpitangui rel=me title=GitHub><i data-feather=github></i></a>
+<script src=https://yanpitangui.com/js/themetoggle.js></script><nav aria-label="Language switcher"><span aria-label=en style="border-bottom:3px solid var(--callouctcolor)">en</span>
+<a title=pt style=border:none href=https://yanpitangui.com/pt/ aria-label=pt>pt</a></nav></nav></header><main class=list><div class=site-description></div></main><footer><div style=display:flex><a class=soc href=https://github.com/yanpitangui rel=me title=GitHub><i data-feather=github></i></a>
 <a class=border></a><a class=soc href=https://twitter.com/aethelingaeg rel=me title=Twitter><i data-feather=twitter></i></a>
 <a class=border></a><a class=soc href=https://www.linkedin.com/in/yanpitangui/ rel=me title=Linkedin><i data-feather=linkedin></i></a>
 <a class=border></a></div><div class=footer-info>2023 © Yan Pitangui | <a href=https://github.com/athul/archie>Archie Theme</a> | Built with <a href=https://gohugo.io>Hugo</a></div></footer><script>feather.replace()</script></div></body></html>
